<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/edit_text_edit_money_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_item_name"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_text_edit_money_item_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_category"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_text_edit_money_item_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_type"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_text_edit_money_item_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_amount"
        android:inputType="number"
        android:padding="@dimen/small_padding"
        android:textSize="18sp" />


    <Button
        android:id="@+id/button_edit"
        style="@style/genericView"
        android:text="@string/button_edit" />

    <Button
        android:id="@+id/button_delete"
        style="@style/genericView"
        android:text="@string/button_delete" />

    <Button
        android:id="@+id/button_cancel"
        style="@style/genericView"
        android:text="@string/button_cancel" />

</LinearLayout>