<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddMoneyItemActivity">


    <EditText
        android:id="@+id/edit_text_new_money_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_item_name"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_text_new_money_item_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_category"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_text_new_money_item_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_type"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_text_new_money_item_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_amount"
        android:inputType="number"
        android:padding="@dimen/small_padding"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel" />
</LinearLayout>